# cubic_bezier_splines

./: CMakeLists.txt  cubic_bezier_splines.c  readme.md
.github/workflows/: generate-documentation.yml
documentation/: main.tree  redirection-rules.xml
documentation/cfg/: buildprofiles.xml
documentation/topics/: API.md  Functions.md  Integration.md  Overview.md  Types.md
include/: cubic_bezier_splines.h
